Split app.jsx into components

--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -1,23 +1,23 @@
-#navbar{
+#navbar {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: clamp(4.7rem, 5vw, 5rem);
   height: 96vh;
-  padding: 1rem .3rem;
+  padding: 1rem 0.3rem;
   border-radius: 1rem;
   gap: 5vh;
 }
 
-#navbar > div{
+#navbar > div {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
 }
 
-#nav_logo_icon{
+#nav_logo_icon {
   width: 2.5rem;
   height: 2.5rem;
   display: flex;
@@ -26,31 +26,31 @@
   color: #00e7ff;
 }
 
-#nav_logo p{
+#nav_logo p {
   color: #00e7ff;
   font-size: 1rem;
 }
 
-.nav_icon{
+.nav_icon {
   width: 1.5rem;
   height: 1.5rem;
 }
 
-.nav_item p{
+.nav_item p {
   font-variant: small-caps;
 }
 
-.nav_item{
-  transition: .5s;
-  opacity: .5;
+.nav_item {
+  transition: 0.5s;
+  opacity: 0.5;
 }
 
-.nav_item:hover{
+.nav_item:hover {
   color: #00e7ff;
   opacity: 1;
 }
 
-.this_page{
+.this_page {
   opacity: 1;
 }
 
