--- a/src/style/day_forecast.css
+++ b/src/style/day_forecast.css
@@ -1,9 +1,8 @@
 #day_forecast {
   display: flex;
   flex-direction: column;
-  border-radius: 1rem;
-  padding: 1rem;
-  height: inherit;
+  border-radius: .75rem;
+  padding: 1.5rem;
 }
 
 #day_forecast > p {
@@ -12,13 +11,5 @@
 
 #days_container {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
-  flex-grow: 1;
-}
-
-@media (max-width: 1000px){
-  #day_forecast{
-    display: none;
-  }
 }
