--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -1,8 +1,8 @@
 #navbar {
   position: sticky;
+  top: 2vh;
+  left: 2vh;
   display: flex;
-  top: 20px;
-  left: 20px;
   flex-direction: column;
   align-items: center;
   width: clamp(4.7rem, 5vw, 5rem);
@@ -10,6 +10,7 @@
   padding: 1rem 0.3rem;
   border-radius: 1rem;
   gap: 5vh;
+  transition: 1s;
 }
 
 #navbar > div {
@@ -45,6 +46,7 @@
 .nav_item {
   transition: 0.5s;
   opacity: 0.5;
+  cursor: pointer;
 }
 
 .nav_item:hover {
@@ -56,8 +58,45 @@
   opacity: 1;
 }
 
+#hamburger{
+  position: fixed;
+  top: -2.3rem;
+  left: -2.3rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: #00e7ff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  cursor: pointer;
+}
+
+#hamburger span{
+  position:absolute;
+  bottom: .5rem;
+  right: .5rem;
+  color: #0e1621;
+  transform: rotate(180deg);
+}
+
 @media (max-width: 1000px){
   #navbar{
-    display: none;
+    position: fixed;
+    left: -5rem;
+    opacity: 0;
+  }
+
+  #navbar.active{
+    left: 2vh;
+    opacity: 1;
+  }
+
+  #nav_logo{
+    transition: 0;;
+  }
+  
+  #hamburger.active{
+    display: block;
   }
 }
